Add Slot model, add bundler-audit and brakeman to Gemfile

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,9 @@ require:
 Style/Documentation:
   Enabled: false
 
+RSpec/ImplicitSubject:
+  Enabled: false
+
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
